--- a/themes/yilia/layout/_partial/head.ejs
+++ b/themes/yilia/layout/_partial/head.ejs
@@ -29,4 +29,5 @@
     <link rel="icon" href="<%- theme.favicon %>">
   <% } %>
   <%- css('css/style') %>
+  <meta name="google-site-verification" content="g2F4zEsqkAiOoup4LYXbwN5Qsy5KM5YQNzIGsGr9sCI" />
 </head>
