--- a/themes/yilia/layout/_partial/footer.ejs
+++ b/themes/yilia/layout/_partial/footer.ejs
@@ -6,7 +6,9 @@
     	</div>
       	<div class="footer-right">
       		<a href="http://hexo.io/" target="_blank">Hexo</a>  Theme <a href="https://github.com/litten/hexo-theme-yilia" target="_blank">Yilia</a> by Litten
-      	</div>
+        </div>
+        <br>
+        <div align="center"><a href="http://www.miibeian.gov.cn/" target="_blank">苏ICP备15045551号</a></div>
     </div>
   </div>
 </footer>
